[package]
name = "spawnflake"
description = "random data generator"
version = "0.2.3"
authors = ["stefanos.kouroupis <manekato@gmail.com>"]
edition = "2018"
repository = "https://github.com/elasticrash/spawnflake"
license = "MIT"
readme = "README.md"
keywords = ["data-generator", "database-tools"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.53"
mysql = "20.1.0"
