[package]
name = "spawnflake"
description = "Generate pattern based random data for mysql"
version = "0.2.5"
authors = ["Stefanos Kouroupis <s.kouroupis@voidmachines.com>"]
edition = "2021"
repository = "https://github.com/elasticrash/spawnflake"
license = "MIT"
readme = "README.md"
keywords = ["data-generator", "database-tools", "integration-testing"]

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
rand = "0.8.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.53"
mysql = "20.1.0"
